Added sensors to dashboard

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,24 @@ services:
     networks:
       - sensors-network
 
+  dashboard:
+    build: services/dashboard
+    container_name: dashboard
+    ports:
+      - 3000:3000
+    environment:
+      - MONGODB_URI=mongodb://mongodb:27017/sensordata
+      - NODE_ENV=production
+    depends_on:
+      - mongodb
+    volumes:
+      - ./services/dashboard/app:/usr/src/app
+      - ./services/graphql/package.json:/usr/src/app/package.json
+      - ./services/graphql/package-lock.json:/usr/src/app/package-lock.json
+      - /usr/src/app/node_modules
+    networks:
+      - app-network
+
 networks:
   sensors-network:
     driver: bridge
