--- a/services/sensor/Dockerfile
+++ b/services/sensor/Dockerfile
@@ -2,10 +2,10 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY ./app/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY sensor_simulation.py .
-COPY config.py .
+COPY ./app/sensor_simulation.py .
+COPY ./app/config.py .
 
 CMD ["python", "sensor_simulation.py"]
