--- a/services/dashboard/package.json
+++ b/services/dashboard/package.json
@@ -17,9 +17,11 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "kafkajs": "^2.2.4",
         "leaflet": "^1.9.4",
         "mongodb": "^6.15.0",
         "mongoose": "^8.12.2",
+        "socket.io": "^4.6.1",
         "vue": "^3.3.4"
     },
     "devDependencies": {
