--- a/services/graphql/package.json
+++ b/services/graphql/package.json
@@ -12,7 +12,8 @@
     "dependencies": {
         "express": "^4.18.2",
         "express-graphql": "^0.12.0",
-        "graphql": "^14.7.0"
+        "graphql": "^14.7.0",
+        "kafkajs": "^2.2.4"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
