--- a/services/server/app/package.json
+++ b/services/server/app/package.json
@@ -14,14 +14,12 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.11.0",
+    "graphql": "^15.10.1",
     "kafkajs": "^2.2.4",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.14.0",
+    "mongoose": "^8.15.0",
+    "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
   }
 }
