--- a/services/mongodb/Dockerfile
+++ b/services/mongodb/Dockerfile
@@ -2,6 +2,5 @@ FROM mongo:latest
 
 WORKDIR /docker-entrypoint-initdb.d/
 
-COPY *.js /docker-entrypoint-initdb.d/
-
-RUN chmod 777 /docker-entrypoint-initdb.d/init-mongo.js
+COPY init-mongo.js /docker-entrypoint-initdb.d/
+COPY sensor_locations.json /docker-entrypoint-initdb.d/
