--- a/services/dashboard/app/package.json
+++ b/services/dashboard/app/package.json
@@ -18,6 +18,7 @@
     ],
     "dependencies": {
         "leaflet": "^1.9.4",
+        "leaflet.heat": "^0.2.0",
         "socket.io-client": "^4.8.1",
         "vue": "^3.5.13"
     },
